# IRM-backend

./: .devdbrc  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  req.txt  server-setup.sh
irm_backend/: Dockerfile  create_superuser.py  manage.py  req.txt
irm_backend/irm_backend/: asgi.py  settings.py  urls.py  wsgi.py
irm_backend/materials/: admin.py  models.py  serializers.py  urls.py  views.py
irm_backend/materials/migrations/: 0001_initial.py  0002_material_title_alter_material_text.py  0003_filetype_attachment.py  0004_alter_attachment_options_alter_filetype_options_and_more.py  0005_alter_attachment_material.py  0006_rename_filetype_attachmenttype.py  0007_alter_attachment_file_type.py  0008_alter_attachment_options_and_more.py  0009_alter_attachment_options_alter_attachment_path.py  0010_remove_attachment_material_attachment_theme.py  0011_rename_title_attachmenttype_type_and_more.py  0012_section.py  0013_attachment_section_alter_attachment_theme.py  0014_alter_attachment_section_alter_attachment_theme_and_more.py  0015_alter_attachment_section_alter_attachment_theme.py  0016_department_employee.py  0017_remove_employee_user_employee_fio_employee_gender.py  0018_alter_employee_options_alter_employee_department_and_more.py  0019_alter_employee_department.py  0020_alter_employee_department.py  0021_alter_section_url.py  0022_alter_attachment_name.py  0023_alter_attachment_path.py
irm_backend/tests/: Material.py  admin.py  models.py  serializers.py  tests.py  urls.py  views.py
irm_backend/utils/: exporter.py
nginx/: nginx.conf
(+17 files in other folders)
